<resources>
    <string name="app_name">WakeMind</string>
    
    <!-- Main screen -->
    <string name="start_alarms">Start Daily Alarms</string>
    <string name="stop_alarms">Stop Alarms</string>
    <string name="next_alarm">Next alarm: %s</string>
    <string name="alarms_active">Daily alarms are active</string>
    <string name="alarms_inactive">Daily alarms are inactive</string>
    <string name="alarm_time_1">12:00 AM</string>
    <string name="alarm_time_2">12:15 AM</string>
    
    <!-- Challenge screen -->
    <string name="solve_challenge">Solve this challenge to dismiss alarm</string>
    <string name="math_challenge">Math Challenge</string>
    <string name="pattern_challenge">Pattern Challenge</string>
    <string name="correct">Correct!</string>
    <string name="incorrect">Try Again</string>
    <string name="tap_pattern">Tap the pattern in order</string>
    <string name="draw_shape">Draw the shape</string>
    <string name="daily_alarms">Daily Alarms</string>
    <string name="remember_pattern">Remember this pattern:</string>
    <string name="math_question_format">%s = ?</string>
    
    <!-- Notifications -->
    <string name="alarm_notification_title">Wake Up!</string>
    <string name="alarm_notification_text">Solve a challenge to dismiss</string>
    <string name="alarm_channel_name">Alarm Notifications</string>
    <string name="alarm_channel_description">Notifications for active alarms</string>
</resources>
